tests/fixtures/invalid/list_none.py
# Cannot call list() with None
x = list(None)
